# multi-cloud-storage

./: README.md
clf_monitor/clf_monitor/: requirements.txt
clf_monitor/clf_monitor/src/: main.py
clf_monitor/clf_monitor/src/controller/: clf_monitor.py
clf_monitor/clf_monitor/src/fs/: log_reader.py
clf_monitor/clf_monitor/src/log_aggregators/: base_aggregator.py  summary_stats_generator.py  traffic_speed_alert.py
clf_monitor/clf_monitor/src/storage/: base_storage.py  sqlite_store.py
clf_monitor/clf_monitor/tests/aggregators/: test_data.json  test_summary_stats_generator.py  test_traffic_speed_alert.py  tools.py
clf_monitor/log_generator/: clf.py  clf_log_generator.py
ipc_ds/: CMakeLists.txt  conanfile.py  pypoco.cpp
react-typescript/src/components/: Navbar.tsx  TodoForm.tsx  TodoList.tsx
react-typescript/src/pages/: AboutPage.tsx
test_app/src/: Hello.js
